sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:5: error: '<-' expected but ')' found.
    for (j>- 0 to i) {
                   ^AlgBubbleSort2:13: error: illegal start of simple expression
  }
  ^